# qiskit-pharmaceutical-vqe

./: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  PROJECT_COMPLETION_REPORT.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: README.md
examples/: 01_basic_h2_vqe.ipynb  basic_usage.py
pharma_vqe/: __init__.py  molecular_simulator.py  vqe_algorithm.py
tests/: __init__.py  test_molecular_simulator.py  test_vqe_algorithm.py
