[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit-pharmaceutical-vqe"
version = "0.1.0"
description = "Quantum VQE algorithms for pharmaceutical drug discovery using IBM Quantum hardware"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Quantum Molecular Simulation Services", email = "dev@pharma-vqe.com"},
]
keywords = ["quantum", "vqe", "pharmaceutical", "drug-discovery", "ibm-quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "qiskit>=0.43.0",
    "qiskit-ibm-runtime>=0.15.0",
    "qiskit-aer>=0.12.0",
    "numpy>=1.21",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
    "mypy>=1.0",
    "sphinx>=5.0",
]
jupyter = [
    "jupyter>=1.0",
    "jupyterlab>=3.0",
    "ipykernel>=6.0",
]
examples = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/BrandonButera/qiskit-pharmaceutical-vqe"
Documentation = "https://github.com/BrandonButera/qiskit-pharmaceutical-vqe/docs"
Repository = "https://github.com/BrandonButera/qiskit-pharmaceutical-vqe.git"
Issues = "https://github.com/BrandonButera/qiskit-pharmaceutical-vqe/issues"

[tool.setuptools]
packages = ["pharma_vqe"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pharma_vqe --cov-report=html --cov-report=term-missing"
pythonpath = ["."]
